# MCU

./: .gitignore  .mxproject  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  idontknow.ioc
Core/Src/: main.c  main.cpp
Core/Src/app/: camera.cpp  camera.hpp  constants.hpp  game.cpp  game.hpp  gameloop.cpp  gameloop.hpp  input.hpp  math.hpp  platform.hpp  player.cpp  player.hpp
Core/Src/app/math/: Vec3.hpp
Core/Src/sim/: host_platform.cpp  host_platform.hpp  main_sim.cpp
cmake/: starm-clang.cmake
